[package]
name = "ccfind"
version = "0.1.0"
edition = "2021"
authors = ["hiboma"]
description = "Fuzzy finder for Claude Code named sessions"
license = "MIT"
repository = "https://github.com/hiboma/ccfind"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
nucleo-matcher = "0.3"
crossterm = "0.28"
rayon = "1"
memchr = "2"
